:lipstick: Fix scrollbar showing up on some browsers

--- a/src/app/event-hierarchy/event-hierarchy.component.scss
+++ b/src/app/event-hierarchy/event-hierarchy.component.scss
@@ -406,6 +406,8 @@ ul {
 
 ::ng-deep .mat-mdc-button .mdc-button__label.add-overflowX {
   overflow-x: scroll;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .has-sibling {
